// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RedeploymentToolbar Component Correctly renders redeployment bar when deployment info isn't there 1`] = `
<div
  className="d-flex justify-content-between redeployment-toolbar px-4 py-3 container-fluid"
>
  <div
    className="d-flex flex-row justify-content-between w-100"
  >
    <span
      className="status-pill badge badge-pill badge-primary"
      style={
        Object {
          "backgroundColor": "grey",
        }
      }
    >
      <div
        className="text"
      >
        Loading
      </div>
      <i
        className="fas fa-question-circle fa-lg"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </span>
    <button
      className="float-right btn-disabled btn btn-primary btn-lg"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <div
        className="button-text-layer"
      >
        Publish changes
      </div>
    </button>
  </div>
  <div
    className="toast-container"
  />
</div>
`;

exports[`RedeploymentToolbar Component Correctly renders redeployment bar when deployment is by admin 1`] = `
<div
  className="d-flex justify-content-between redeployment-toolbar px-4 py-3 container-fluid"
>
  <div
    className="d-flex flex-row justify-content-between w-100"
  >
    <span
      className="status-pill badge badge-pill badge-primary"
      style={
        Object {
          "backgroundColor": "#00a556",
        }
      }
    >
      <div
        className="text"
      >
        Publishing
      </div>
      <i
        className="fas fa-question-circle fa-lg"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </span>
    <button
      className="float-right btn-enabled btn btn-primary btn-lg"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <div
        className="notification-layer"
      >
        <p>
          3
        </p>
      </div>
      <div
        className="button-text-layer"
      >
        Publish changes
      </div>
    </button>
  </div>
  <div
    className="toast-container"
  />
</div>
`;

exports[`RedeploymentToolbar Component Correctly renders redeployment bar when instance has pending changes 1`] = `
<div
  className="d-flex justify-content-between redeployment-toolbar px-4 py-3 container-fluid"
>
  <div
    className="d-flex flex-row justify-content-between w-100"
  >
    <span
      className="status-pill badge badge-pill badge-primary"
      style={
        Object {
          "backgroundColor": "#00a556",
        }
      }
    >
      <div
        className="text"
      >
        Publishing
      </div>
      <i
        className="fas fa-question-circle fa-lg"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </span>
    <button
      className="float-right btn-enabled btn btn-primary btn-lg"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <div
        className="notification-layer"
      >
        <p>
          3
        </p>
      </div>
      <div
        className="button-text-layer"
      >
        Publish changes
      </div>
    </button>
  </div>
  <div
    className="toast-container"
  />
</div>
`;

exports[`RedeploymentToolbar Component Correctly renders redeployment bar when instance is being deployed by user 1`] = `
<div
  className="d-flex justify-content-between redeployment-toolbar px-4 py-3 container-fluid"
>
  <div
    className="d-flex flex-row justify-content-between w-100"
  >
    <span
      className="status-pill badge badge-pill badge-primary"
      style={
        Object {
          "backgroundColor": "#ff9b04",
        }
      }
    >
      <div
        className="text"
      >
        Publishing
      </div>
      <i
        className="fas fa-question-circle fa-lg"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </span>
    <button
      className="float-right btn-disabled btn btn-primary btn-lg"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <div
        className="button-text-layer"
      >
        Publish changes
      </div>
    </button>
  </div>
  <div
    className="toast-container"
  />
</div>
`;

exports[`RedeploymentToolbar Component Correctly renders redeployment bar when instance is being prepared 1`] = `
<div
  className="d-flex justify-content-between redeployment-toolbar px-4 py-3 container-fluid"
>
  <div
    className="d-flex flex-row justify-content-between w-100"
  >
    <span
      className="status-pill badge badge-pill badge-primary"
      style={
        Object {
          "backgroundColor": "#ff9b04",
        }
      }
    >
      <div
        className="text"
      >
        Publishing
      </div>
      <i
        className="fas fa-question-circle fa-lg"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </span>
    <button
      className="float-right btn-disabled btn btn-primary btn-lg"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <div
        className="button-text-layer"
      >
        Publish changes
      </div>
    </button>
  </div>
  <div
    className="toast-container"
  />
</div>
`;

exports[`RedeploymentToolbar Component Correctly renders redeployment bar when instance is up-to-date 1`] = `
<div
  className="d-flex justify-content-between redeployment-toolbar px-4 py-3 container-fluid"
>
  <div
    className="d-flex flex-row justify-content-between w-100"
  >
    <span
      className="status-pill badge badge-pill badge-primary"
      style={
        Object {
          "backgroundColor": "#00a556",
        }
      }
    >
      <div
        className="text"
      >
        Up to date
      </div>
      <i
        className="fas fa-question-circle fa-lg"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </span>
    <button
      className="float-right btn-disabled btn btn-primary btn-lg"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <div
        className="button-text-layer"
      >
        Publish changes
      </div>
    </button>
  </div>
  <div
    className="toast-container"
  />
</div>
`;
